--- a/.github/workflows/v2-docker-build-push.yml
+++ b/.github/workflows/v2-docker-build-push.yml
@@ -177,10 +177,10 @@ jobs:
         with:
           ref: ${{ needs.init-image-build-push.outputs.branch_to_test }}
 
-      # # Free up disk space before building large images
-      # - name: Free up disk space
-      #   run: |
-      #     bash .ci/free_disk_space.sh          
+      # Free up disk space before building large images
+      - name: Free up disk space
+        run: |
+          bash .ci/free_disk_space.sh          
 
       # Build and push aiverify-python-base
       - name: Build and push aiverify-python-base
@@ -211,9 +211,9 @@ jobs:
           set +e
           echo "Building image ${{ matrix.image_name}}:$tag ${{ matrix.target }} ${{ matrix.tag_suffix }}..."
           if [ "${{ matrix.target }}" == "" ]; then
-            bash .ci/docker_build_push.sh true ${{ matrix.image_name }} $tag aiverify-foundation ${{ matrix.image_name }}
+            bash .ci/docker_build_push.sh ${{ matrix.image_name }} $tag aiverify-foundation ${{ matrix.image_name }}
           else
-            bash .ci/docker_build_push.sh true ${{ matrix.image_name }} $tag aiverify-foundation ${{ matrix.image_name }} ${{ matrix.target }} ${{ matrix.tag_suffix }}
+            bash .ci/docker_build_push.sh ${{ matrix.image_name }} $tag aiverify-foundation ${{ matrix.image_name }} ${{ matrix.target }} ${{ matrix.tag_suffix }}
           fi
           build_status=$?
           set -e
