--- a/.github/workflows/v2-docker-build-push-ecr.yml
+++ b/.github/workflows/v2-docker-build-push-ecr.yml
@@ -58,7 +58,7 @@ jobs:
       id-token: write
       contents: read
       packages: write
-      
+
     strategy:
       # Dynamically create the build matrix based on the event type
       # - For manual dispatch: build a single image from input parameters
@@ -88,13 +88,14 @@ jobs:
         with:
           ref: ${{ github.event.inputs.branch || 'main' }}
       
-      # # Free up disk space before building large Docker images
-      # - name: Free up disk space
-      #   run: |
-      #     bash .ci/free_disk_space.sh
+      # Free up disk space before building large Docker images
+      - name: Free up disk space
+        run: |
+          bash .ci/free_disk_space.sh
 
       # Build and push aiverify-python-base to GHCR
       - name: Build and push aiverify-python-base to GHCR
+        if: matrix.image_name == 'aiverify-test-engine-worker' || matrix.image_name == 'aiverify-apigw'
         run: |
           chmod +x .ci/docker_build_push.sh
           bash .ci/docker_build_push.sh aiverify-python-base latest aiverify-foundation aiverify-test-engine
@@ -125,7 +126,6 @@ jobs:
               --repository-name ${{ github.event.inputs.github_username || 'aiverify-foundation' }}/${{ matrix.image_name }} \
               --image-ids "[$image]"
           done
-
 
       # Build and push Docker image using provided or matrix values
       - name: Run Docker build & push
