--- a/aiverify-apigw/pyproject.toml
+++ b/aiverify-apigw/pyproject.toml
@@ -52,7 +52,7 @@ dev = "python -m aiverify_apigw"
 python = ["3.11"]
 
 [tool.hatch.envs.hatch-test]
-extra-dependencies = ["faker>=28.1.0"]
+extra-dependencies = ["faker>=28.1.0", "aiverify-test-engine"]
 
 [tool.ruff.lint]
 preview = true
