--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -157,7 +157,7 @@ jobs:
           npm ci
           bash ${GITHUB_WORKSPACE}/.ci/free_disk_space.sh
           npx playwright install --with-deps
-          URL=http://127.0.0.1:3000 npx playwright test tests/portal/workflows.spec.js
+          URL=http://127.0.0.1 PORT_NUMBER=3000 ROOT_FOLDER=${GITHUB_WORKSPACE}/stock-plugins/user_defined_files npx playwright test tests/portal/workflows.spec.js
 
       # - name: Upload Playwright Traces
       #   if: always()
