Add Commands To Pull Various Images

--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -70,6 +70,13 @@ jobs:
 
       - name: Build & RUN PORTAL, APIGW & Test Engine Worker
         run: |
+          echo "Pull AI Verify APIGW Image"
+          docker pull $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$AWS_CONTAINER_REPOSITORY/aiverify-apigw
+
+          echo "Pull AI Verify Test Engine Worker Image"
+          docker pull $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$AWS_CONTAINER_REPOSITORY/aiverify-test-engine-worker
+
+          echo "Pull AI Verify Portal Image"
           docker pull $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$AWS_CONTAINER_REPOSITORY/aiverify-portal
 
       # - name: Run Integration Test
