--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -10,6 +10,10 @@ env:
   GITHUB_TOKEN: ${{ github.token }}
 
 on:
+  # Run this workflow everyday at 6:05pm Singapore Time (10:05am UTC)
+  schedule:
+    - cron: '5 10 * * *'
+      
   # Runs when a pull request review is being submitted
   pull_request:
     types: [assigned, synchronize]
@@ -36,6 +40,7 @@ concurrency:
 
 jobs:
   Integration-Test:
+    
     #  Run only when PR is approved
     if: (github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'push')
     runs-on: ubuntu-latest
