Add Test Engine Worker Tag

--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -7,6 +7,7 @@ env:
   AWS_ACCOUNT_ID: ${{ vars.AWS_ACCOUNT_ID }}
   AWS_REGION: ${{ vars.AWS_REGION }}
   AWS_CONTAINER_REPOSITORY: ${{ vars.AWS_CONTAINER_REPOSITORY }}
+  TEST_ENGINE_WORKER_IMAGE_TAG: ${{ vars.TEST_ENGINE_WORKER_IMAGE_TAG }}
   GITHUB_TOKEN: ${{ github.token }}
 
 on:
@@ -79,7 +80,7 @@ jobs:
           docker pull $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$AWS_CONTAINER_REPOSITORY/aiverify-apigw
 
           echo "Pull AI Verify Test Engine Worker Image"
-          docker pull $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$AWS_CONTAINER_REPOSITORY/aiverify-test-engine-worker:venv
+          docker pull $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$AWS_CONTAINER_REPOSITORY/aiverify-test-engine-worker:$TEST_ENGINE_WORKER_IMAGE_TAG
 
           echo "Pull AI Verify Portal Image"
           docker pull $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$AWS_CONTAINER_REPOSITORY/aiverify-portal
