--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.ref }}
+          ref: main
           repository: aiverify-foundation/aiverify
 
       - name: Checkout Integration Test Code
