--- a/.github/workflows/v2-docker-build-run-ec2.yml
+++ b/.github/workflows/v2-docker-build-run-ec2.yml
@@ -16,9 +16,6 @@ on:
         default: 'main'
         type: string
 
-  push:
-    branches: [ ci/self-hosted-runner ]
-
 # Allow one concurrent deployment
 concurrency:
   group: ${{ github.repository }}-${{ github.workflow }}
@@ -44,7 +41,7 @@ jobs:
         run: |
           bash .ci/free_disk_space.sh
 
-        # Log in to GitHub Container Registry (GHCR), needed in Github Actions
+        # Log in to GitHub Container Registry (GHCR), necessary in Github Actions
       - name: Login to GHCR
         run: |
             echo "${{ env.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
