Change to npm install

--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -6,7 +6,6 @@ env:
   GITHUB_TOKEN: ${{ github.token }}
 
 on:
-  
   # Runs when a pull request review is being submitted
   pull_request:
     types: [assigned, synchronize]
@@ -29,7 +28,6 @@ concurrency:
 
 jobs:
   smoke-test:
-    
     #  Run only when PR is approved
     if: (github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'push')
     runs-on: self-hosted-aiverify
@@ -61,20 +59,20 @@ jobs:
       # Log in to GitHub Container Registry (ghcr.io), needed by Github Actions to access ghcr.io
       - name: Login to GHCR
         run: |
-            echo "${{ env.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
+          echo "${{ env.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
 
-      # Clean slate to force rebuild all images    
+      # Clean slate to force rebuild all images
       - name: Delete all local Docker images
         run: |
           docker ps -q | xargs -r docker stop
           docker images -q | xargs -r docker rmi -f
           docker system prune -a -f --volumes
 
-      # Launch containers in Docker Compose  
+      # Launch containers in Docker Compose
       - name: Run images in Docker Compose
         run: |
           cd deployment/docker-compose-dev
-          COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile automated-tests-docker up -d
+          COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile portal --profile automated-tests-docker up -d
 
       # - name: Setup Python
       #   uses: actions/setup-python@v5
@@ -171,7 +169,7 @@ jobs:
       - name: Run Smoke Test
         run: |
           cd integration-testing
-          npm ci
+          npm install
           # bash ${GITHUB_WORKSPACE}/.ci/free_disk_space.sh
           npx playwright install --with-deps
           URL=http://127.0.0.1 PORT_NUMBER=3000 ROOT_FOLDER=${GITHUB_WORKSPACE}/stock-plugins/user_defined_files npx playwright test tests/portal/workflows.spec.js
