--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -67,12 +67,12 @@ jobs:
           docker ps -q | xargs -r docker stop
           docker images -q | xargs -r docker rmi -f
           docker system prune -a -f --volumes
+          lsof -i
 
       # Launch containers in Docker Compose
       - name: Run images in Docker Compose
         run: |
           cd deployment/docker-compose-dev
-          lsof -i TCP:3000
           COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile portal --profile automated-tests-docker up -d
 
       # - name: Setup Python
