--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -64,15 +64,16 @@ jobs:
       # Clean slate to force rebuild all images
       - name: Delete all local Docker images
         run: |
+          cd deployment/docker-compose-dev
+          docker-compose down
           docker ps -q | xargs -r docker stop
           docker images -q | xargs -r docker rmi -f
           docker system prune -a -f --volumes
-          sudo service docker restart
 
       # Launch containers in Docker Compose
       - name: Run images in Docker Compose
         run: |
-          cd deployment/docker-compose-dev
+          # cd deployment/docker-compose-dev
           COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile portal --profile automated-tests-docker up -d
 
       # - name: Setup Python
