--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Delete all local Docker images
         run: |
           cd deployment/docker-compose-dev
-          docker-compose down
+          docker compose down
           docker ps -q | xargs -r docker stop
           docker images -q | xargs -r docker rmi -f
           docker system prune -a -f --volumes
