--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -67,7 +67,7 @@ jobs:
           docker ps -q | xargs -r docker stop
           docker images -q | xargs -r docker rmi -f
           docker system prune -a -f --volumes
-          docker builder prune
+          docker builder prune -y
 
       # Launch containers in Docker Compose
       - name: Run images in Docker Compose
