--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -70,7 +70,7 @@ jobs:
           docker ps -q | xargs -r docker stop
           docker images -q | xargs -r docker rmi -f
           docker system prune -a -f --volumes
-          docker builder prune -y
+          docker builder prune -f
 
       # Launch containers in Docker Compose
       - name: Run images in Docker Compose
