--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -173,7 +173,7 @@ jobs:
           cd integration-testing
           npm install
           npx playwright install --with-deps
-          URL=http://127.0.0.1 PORT_NUMBER=3000 ROOT_FOLDER=${GITHUB_WORKSPACE}/stock-plugins/user_defined_files npx playwright test tests/portal/workflows.spec.js
+          URL=http://127.0.0.1 PORT_NUMBER=3000 ROOT_FOLDER=${{ github.workspace }}/stock-plugins/user_defined_files npx playwright test tests/portal/workflows.spec.js
 
       - name: Upload Playwright Traces
         if: always()
