--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -73,7 +73,6 @@ jobs:
       - name: Run images in Docker Compose
         run: |
           cd deployment/docker-compose-dev
-          echo ${GITHUB_WORKSPACE}
           COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile automated-tests-docker --profile portal up -d
 
       # Run Smoke Test
@@ -82,7 +81,7 @@ jobs:
           cd integration-testing
           npm install
           npx playwright install --with-deps
-          URL=http://127.0.0.1 PORT_NUMBER=3000 ROOT_FOLDER="${{ github.workspace }}/stock-plugins/user_defined_files" npx playwright test tests/portal/workflows.spec.js
+          URL=http://127.0.0.1 PORT_NUMBER=3000 ROOT_FOLDER=$GITHUB_WORKSPACE/stock-plugins/user_defined_files" npx playwright test tests/portal/workflows.spec.js
 
       # Upload Playwright Traces
       - name: Upload Playwright Traces
