--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -77,13 +77,12 @@ jobs:
 
       # Run Smoke Test
       - name: Run Smoke Test
-        env:
-          GITHUB_WORKSPACE: ${{ github.workspace }}
         run: |
           cd integration-testing
+          ls ../
           npm install
           npx playwright install --with-deps
-          URL=http://127.0.0.1 PORT_NUMBER=3000 ROOT_FOLDER=$GITHUB_WORKSPACE/stock-plugins/user_defined_files npx playwright test tests/portal/workflows.spec.js
+          URL=http://127.0.0.1 PORT_NUMBER=3000 ROOT_FOLDER=../stock-plugins/user_defined_files npx playwright test tests/portal/workflows.spec.js
 
       # Upload Playwright Traces
       - name: Upload Playwright Traces
