--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -82,7 +82,7 @@ jobs:
           ls ../
           npm install
           npx playwright install --with-deps
-          URL=http://127.0.0.1 PORT_NUMBER=3000 ROOT_FOLDER=../stock-plugins/user_defined_files npx playwright test tests/portal/workflows.spec.js
+          URL=http://127.0.0.1 PORT_NUMBER=3000 ROOT_FOLDER=""../stock-plugins/user_defined_files" npx playwright test tests/portal/workflows.spec.js
 
       # Upload Playwright Traces
       - name: Upload Playwright Traces
